# serializer version: 1
# name: test_eg_size1
  dict({
    '@': 100.0,
  })
# ---
# name: test_eg_size2
  dict({
    'A_': 100.0,
  })
# ---
# name: test_eg_size3
  dict({
    'BW': 96.8680832226649,
    'Bw': 3.131916777335104,
  })
# ---
# name: test_eg_size4
  dict({
    'CF': 61.272787173292336,
    'CN': 4.104044429104829,
    'CR': 33.48969282419755,
    'C^': 0.29180132408772863,
    'Cr': 0.7914718709798877,
    'C~': 0.05020237833767375,
  })
# ---
# name: test_eg_size5
  dict({
    'D?{': 46.89550834661095,
    'D@s': 34.28584992813374,
    'D@{': 2.851058325755928,
    'DBw': 1.7174268051704953,
    'DB{': 0.2708972891378035,
    'DDW': 10.399752743246824,
    'DD[': 1.9248143757711635,
    'DFw': 0.08787691031759219,
    'DF{': 0.010124737737804172,
    'DJk': 0.1943562095888533,
    'DJ{': 0.038173652332008076,
    'DN{': 0.009010532149433379,
    'DR{': 0.017633514528998653,
    'D^{': 0.0031972856014118437,
    'D`[': 1.0890148533293673,
    'D`{': 0.02926000762504172,
    'Dd[': 0.09882519131636608,
    'DqK': 0.064430149240572,
    'Dr[': 0.011529605653576042,
    'Dr{': 0.000678212097269179,
    'D~{': 0.0005813246548021534,
  })
# ---
